# filehasher

./: Cargo.toml  LICENSE  README.md
src/: main.rs  util.rs
