[package]
name = "filehasher"
version = "0.1.0"
edition = "2021"
description = "CLI utility, which outputs hash of provided file."
readme = "README.md"
license = "MIT"
repository = "https://github.com/n1clud3/filehasher"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
md5 = "0.7.0"
sha256 = "1.0.3"